# OShw4

./: README.md  pt1  pt1.c  pt1New.c  pt1shell.sh  pt2-first_attempt.c  pt3.c
3way-mpi/: CMakeLists.txt  pt2.c
3way-openmp/: CMakeLists.txt  pt3.c  pt3shell.sh
3way-pthread/: CMakeLists.txt  pt1  pt1.c  pt1shell.sh
